objects/AreaCounty__c.object
<CustomObject>
    <description>The counties in this area, for areas that are defined by county.</description>
    <fields>
        <fullName>AreaCountyEID__c</fullName>
        <description>The Enterprise ID for this Area County.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Area County.</inlineHelpText>
        <label>Area County EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>The area containing this entire county.</description>
        <inlineHelpText>The area containing this entire county.</inlineHelpText>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Area Counties</relationshipLabel>
        <relationshipName>AreaCounties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A county in this area.</description>
        <inlineHelpText>A county in this area.</inlineHelpText>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Area Counties</relationshipLabel>
        <relationshipName>AreaCounties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Area County</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Area County Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area Counties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>